Fix header width on tablet

--- a/profiles/openenterprise/themes/bella/less/header.less
+++ b/profiles/openenterprise/themes/bella/less/header.less
@@ -158,10 +158,7 @@ header {
   }
 }
 .navbar-header {
-  @media @tablet {
-	float: left;
-	width: 25%;
-  }
+
   @media @normal, @wide {
 	float: left;
 	width: 18%;
